--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,8 +17,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LLWBN5CykNcr",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "LLWBN5CykNcr"
       },
       "source": [
         "## Install Dependencies"
@@ -27,8 +27,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3DS5c4fU5anq",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "3DS5c4fU5anq"
       },
       "source": [
         "### mesa"
@@ -36,26 +36,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "i93i258hqkLK",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "i93i258hqkLK"
       },
+      "outputs": [],
       "source": [
         "!apt-get update\n",
         "!apt-get install llvm-6.0 llvm-6.0-tools\n",
         "!wget https://github.com/mmatl/travis_debs/raw/master/xenial/mesa_18.3.3-0.deb\n",
         "!dpkg -i ./mesa_18.3.3-0.deb || true\n",
         "!apt-get install -f"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iHAJGJ4n5dyk",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "iHAJGJ4n5dyk"
       },
       "source": [
         "### SPIN"
@@ -63,11 +63,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "jFUGIM-8hYom",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "jFUGIM-8hYom"
       },
+      "outputs": [],
       "source": [
         "!git clone https://github.com/nkolot/SPIN.git\n",
         "%cd SPIN\n",
@@ -75,15 +77,13 @@
         "!pip uninstall pyopengl scipy -y\n",
         "!pip install git+https://github.com/mmatl/pyopengl.git\n",
         "!pip install scipy==1.1.0"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CIdzL_hJtwio",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "CIdzL_hJtwio"
       },
       "source": [
         "## Download Dataset / Model"
@@ -91,22 +91,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "43rM3oj1lpec",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "43rM3oj1lpec"
       },
+      "outputs": [],
       "source": [
         "!./fetch_data.sh"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YXMhFB3AyOD9",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "YXMhFB3AyOD9"
       },
       "source": [
         "### Retrieve SMPL Dataset"
@@ -115,8 +115,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EXE3hu2_yWcv",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "EXE3hu2_yWcv"
       },
       "source": [
         "You will need the [neutral model](http://smplify.is.tue.mpg.de) for training and running the demo code, while the [male and female models](http://smpl.is.tue.mpg.de/) will be necessary for evaluation on the 3DPW dataset."
@@ -125,8 +125,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2cAFKs4p2E2y",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "2cAFKs4p2E2y"
       },
       "source": [
         "#### Neural Model"
@@ -134,26 +134,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "8PzUOaSNyR_Z",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "8PzUOaSNyR_Z"
       },
+      "outputs": [],
       "source": [
         "# http://smpl.is.tue.mpg.de/ (Neutral Model)\n",
         "#!wget http://smpl.is.tue.mpg.de -O SMPL_python_v.1.0.0.zip\n",
         "!unzip SMPL_python_v.1.0.0.zip -d data && rm -rf data/__MACOSX && rm -r SMPL_python_v.1.0.0.zip"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "_Gyu39Cu1EPI",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "_Gyu39Cu1EPI"
       },
+      "outputs": [],
       "source": [
         "# Only pull smplx and install chumpy once (if you did it for male / female models already)\n",
         "!git clone https://github.com/vchoutas/smplx.git\n",
@@ -162,15 +164,13 @@
         "\n",
         "# Rename basicModel_neutral_lbs_10_207_0_v1.0.0.pkl to SMPL_NEUTRAL.pkl\n",
         "!mv data/smpl/basicModel_neutral_lbs_10_207_0_v1.0.0.pkl data/smpl/SMPL_NEUTRAL.pkl"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8RqG3-iP2Ho9",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "8RqG3-iP2Ho9"
       },
       "source": [
         "#### Male and Female Models"
@@ -178,40 +178,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "Eykpa1LD0zMZ",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "Eykpa1LD0zMZ"
       },
+      "outputs": [],
       "source": [
         "# http://smplify.is.tue.mpg.de (Male and Female Models)\n",
         "#!wget http://smplify.is.tue.mpg.de -O mpips-smplify_public_v2.zip\n",
         "!unzip mpips-smplify_public_v2.zip -d data && rm -r mpips-smplify_public_v2.zip"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "FVAqTXi417gN",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "FVAqTXi417gN"
       },
+      "outputs": [],
       "source": [
         "# Only pull smplx and install chumpy once (if you did in previous neurtal model)\n",
         "!git clone https://github.com/vchoutas/smplx.git\n",
         "!pip2 install chumpy\n",
         "!python2 smplx/tools/clean_ch.py --input-models data/smplify_public/code/models/*.pkl --output-folder data/smpl"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I9p6oOxNngHE",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "I9p6oOxNngHE"
       },
       "source": [
         "## Run Demo"
@@ -220,8 +220,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XU0LAoJg7vGz",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "XU0LAoJg7vGz"
       },
       "source": [
         "### Neural Model"
@@ -229,20 +229,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "27WaJMuyni6j",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "27WaJMuyni6j"
       },
+      "outputs": [],
       "source": [
         "%%bash\n",
         "python3 demo.py \\\n",
         "  --checkpoint=data/model_checkpoint.pt \\\n",
         "  --img=examples/im1010.jpg \\\n",
         "  --openpose=examples/im1010_openpose.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     }
   ]
 }
